--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<head>
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-			<title>Kowalski &amp; Nowak</title>
+			<title>HJS Legal &amp; Services</title>
 			<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 			<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -24,11 +24,11 @@
 				</div>
 				<div class="collapse navbar-collapse" id="mynavbar-content">
 					<ul class="nav navbar-nav pull-right">
-						<li><a href="#about-firm" data-target="scroll">O kancelarii</a></li>
-						<li><a href="#services" data-target="scroll">Usługi</a></li>
-						<li><a href="#team" data-target="scroll">Zespół</a>
+						<li><a href="#about" data-target="scroll">about</a></li>
+						<li><a href="#services" data-target="scroll">services</a></li>
+						<li><a href="#team" data-target="scroll">team</a>
 						<li><a href="#faq" data-target="scroll">FAQ</a></li>
-						<li><a href="#contact" data-target="scroll">Kontakt</a></li>
+						<li><a href="#contact" data-target="scroll">contact</a></li>
 					</ul>
 				</div>
 		    </nav>
@@ -37,9 +37,9 @@
 			<section class="jumbotron text-center">
 				<div class="jumbotron__info-container">
 					<span class="fa fa-balance-scale jumbotron__info-scale" aria-hidden="true"></span>
-					<h1 class="jumbotron__info-header">Kowalski &amp; Nowak</h1>
+					<h1 class="jumbotron__info-header">HJS Legal &amp; Services</h1>
 					<div class="jumbotron__info-subContainer">
-						<p>Kancelaria prawna</p>
+						<p>Holeigh J. Skyler Foundation</p>
 					</div>
 					<a href="#about-firm" data-target="scroll" class="jumbotron__info-downScroll"><span class="fa fa-angle-double-down" aria-hidden="true"></span></a>
 				</div>
@@ -50,7 +50,7 @@
 				<div class="row">
 					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 wow fadeIn">
 						<h2 class="aboutFirm__header">O kancelarii</h2>
-						<p class="aboutFirm__description">Kancelaria Kowalski &amp; Nowak powstała w 2013 r. jako spółka partnerska radcy prawnego Jana Kowalskiego i adwokat Anny Nowak. Kowalski &amp; Nowak jest nowoczesną kancelarią prawną skupiającą doświadczonych prawników. Posiadamy bogate doświadczenie w kompleksowej obsłudza prawnej i podatkowej osób fizycznych i podmiotów gospodarczych.<br><br> Dzięki zespołowi doświadczonych specjalistów oraz współpracy z księgowymi, doradcami podatkowymi, biegłymi rewidentami oraz rzeczoznawcami majątkowymi jesteśmy w stanie oferować usługi na możliwie najwyższym merytorycznie poziomie dla klientów z różnych branż. <br><br>Działamy zgodnie z zasadami etyki zawodowej. Każdorazowo najważniejsze jest dla nas dobro klienta. <br><br>Nie sprzedajemy gotowych rozwiązań prawnych. Wszystkie oferowane przez nas usługi są produktami szytymi na miarę potrzeb naszych Klientów.</p>
+						<p class="aboutFirm__description">Kancelaria Kowalski &amp; Nowak powstała w 2018 r. jako spółka partnerska radcy prawnego Jana Kowalskiego i adwokat Anny Nowak. Kowalski &amp; Nowak jest nowoczesną kancelarią prawną skupiającą doświadczonych prawników. Posiadamy bogate doświadczenie w kompleksowej obsłudza prawnej i podatkowej osób fizycznych i podmiotów gospodarczych.<br><br> Dzięki zespołowi doświadczonych specjalistów oraz współpracy z księgowymi, doradcami podatkowymi, biegłymi rewidentami oraz rzeczoznawcami majątkowymi jesteśmy w stanie oferować usługi na możliwie najwyższym merytorycznie poziomie dla klientów z różnych branż. <br><br>Działamy zgodnie z zasadami etyki zawodowej. Każdorazowo najważniejsze jest dla nas dobro klienta. <br><br>Nie sprzedajemy gotowych rozwiązań prawnych. Wszystkie oferowane przez nas usługi są produktami szytymi na miarę potrzeb naszych Klientów.</p>
 					</div>
 				</div>
 			</section>
@@ -127,7 +127,7 @@
 						<div class="gallery__hovereffect">
 							<img class="gallery__img img-responsive" src="src/images/compressed/lawyer-first.jpg" alt="Zdjęcie pierwszego prawnika.">
 							<div class="gallery__overlay">
-								<h2>Jan Kowalski</h2>
+								<h2>Jenny Wood</h2>
 								<p class="gallery__img-modalTrigger">
 								<button type="button" class="btn-blue" data-toggle="modal" data-target="#modalAboutLawyer-1">
 								  Zobacz więcej
@@ -140,7 +140,7 @@
 								    <div class="modal-content">
 								      <div class="modal-body">
 								        <img class="img-responsive" src="src/images/compressed/lawyer-first.jpg" alt="Zdjęcie pierwszego prawnika.">
-								        <h5 class="modal__header">Jan Kowalski</h5>
+								        <h5 class="modal__header">Jenny Wood</h5>
 								        <p>Partner zarządzający, radca prawny</p>
 								        <h5 class="modal__header">Wykształcenie</h5>
 								        <p>2005-2010 - Uniwersytet Warszawski</p>
