--- a/index.html
+++ b/index.html
@@ -49,15 +49,16 @@
 			<section class="aboutFirm" id="about-firm">
 				<div class="row">
 					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 wow fadeIn">
-						<h2 class="aboutFirm__header">O kancelarii</h2>
-						<p class="aboutFirm__description">Kancelaria Kowalski &amp; Nowak powstała w 2018 r. jako spółka partnerska radcy prawnego Jana Kowalskiego i adwokat Anny Nowak. Kowalski &amp; Nowak jest nowoczesną kancelarią prawną skupiającą doświadczonych prawników. Posiadamy bogate doświadczenie w kompleksowej obsłudza prawnej i podatkowej osób fizycznych i podmiotów gospodarczych.<br><br> Dzięki zespołowi doświadczonych specjalistów oraz współpracy z księgowymi, doradcami podatkowymi, biegłymi rewidentami oraz rzeczoznawcami majątkowymi jesteśmy w stanie oferować usługi na możliwie najwyższym merytorycznie poziomie dla klientów z różnych branż. <br><br>Działamy zgodnie z zasadami etyki zawodowej. Każdorazowo najważniejsze jest dla nas dobro klienta. <br><br>Nie sprzedajemy gotowych rozwiązań prawnych. Wszystkie oferowane przez nas usługi są produktami szytymi na miarę potrzeb naszych Klientów.</p>
+						<h2 class="aboutFirm__header">About Us</h2>
+						<p class="aboutFirm__description">The HJS Foundation was established in 2017 as a partner company of legal advisor Jenny Wood. The foundation is a modern nonprofit organization that brings together experienced professionals. We have extensive experience in comprehensive community services for individuals and business entities. Thanks to a team of experienced specialists and cooperation with our partner organizations, we are able to offer services at the highest possible level of quality to clients from various industries.<br>
+						<br>We operate in accordance with the principles of professional ethics. The client's good is always the most important for us. All our services are products tailored to the needs of our clients.</p>
 					</div>
 				</div>
 			</section>
 
 			<!-- Second section -->
 			<section class="services" id="services">
-					<h2 class="section__header wow fadeIn">Specjalizacje</h2>
+					<h2 class="section__header wow fadeIn">Specialization</h2>
 					<p class="section__description text-center wow fadeIn">Obszary specjalizacji</p>
 				<div class="row row-center">
 					<div class="col-xs-10 col-sm-4 col-md-4 col-lg-4 col-center wow fadeInUp">
@@ -517,18 +518,18 @@
 			<section class="contact" id="contact">
 				<div class="row row-center">
 					<div class="col-xs-12 col-sm-8 col-md-7 col-lg-5 col-center">
-					<h2 class="section__header wow fadeIn">Skontaktuj się z nami</h2>
+					<h2 class="section__header wow fadeIn">Contact Us</h2>
 						<div class="contact__form">
 						  <form>
-						  	<label for="name">Imię i nazwisko</label>
+						  	<label for="name">Name</label>
 						    <input type="text" placeholder="Imię i nazwisko" id="name" class="contact__form-input" required>
 						    <label for="email">Email</label>
 						    <input type="email" placeholder="Email" id="email" class="contact__form-input" required>
-						    <label for="firm">Firma</label>
+						    <label for="firm">Company</label>
 						    <input type="text" placeholder="Firma" id="firm" class="contact__form-input" required>
-						    <label for="message">Wiadomość</label>
+						    <label for="message">Message</label>
 						    <textarea placeholder="Wiadomość" class="contact__form-input" id="message" required></textarea>
-						    <button type="submit" class="btn-orange">Prześlij</button>
+						    <button type="submit" class="btn-orange">Submit</button>
 						  </form>
 						</div>
 					</div>
