--- a/index.html
+++ b/index.html
@@ -541,18 +541,18 @@
 				<div class="row row-center">
 					<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 col-center wow fadeIn">
 						<span class="fa fa-phone" aria-hidden="true"></span>
-						<h2 class="footer__header">Zadzwoń</h2>
-						<p class="footer__paragraph">tel: 33 000 00 00</p>
+						<h2 class="footer__header">Phone</h2>
+						<p class="footer__paragraph">ph: 972.679.1234</p>
 					</div>
 					<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 col-center wow fadeIn">
 						<span class="fa fa-location-arrow" aria-hidden="true"></span>
-						<h2 class="footer__header">Odwiedź</h2>
+						<h2 class="footer__header">Address</h2>
 						<p class="footer__paragraph">Warszawa, ul. Okopowa 12</p>
 					</div>
 					<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 col-center wow fadeIn">
 						<span class="fa fa-envelope-o" aria-hidden="true"></span>
-						<h2 class="footer__header">Napisz</h2>
-						<p class="footer__paragraph">kancelaria.prawna@kancelaria.pl</p>
+						<h2 class="footer__header">Email</h2>
+						<p class="footer__paragraph">info@hjsfmail.org</p>
 					</div>
 				</div>
 					<div class="social wow zoomIn">
