--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<head>
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-			<title>HJS Legal Services</title>
+			<title>HJS Legal</title>
 			<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 			<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -20,15 +20,15 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand"><span class="fa fa-balance-scale" aria-hidden="true"></span>Kowalski &amp; Nowak</a>
+					<a class="navbar-brand"><span class="fa fa-balance-scale" aria-hidden="true"></span>HJS Legal</a>
 				</div>
 				<div class="collapse navbar-collapse" id="mynavbar-content">
 					<ul class="nav navbar-nav pull-right">
-						<li><a href="#about" data-target="scroll">about</a></li>
-						<li><a href="#services" data-target="scroll">services</a></li>
-						<li><a href="#team" data-target="scroll">team</a>
+						<li><a href="#about" data-target="scroll">About</a></li>
+						<li><a href="#services" data-target="scroll">Services</a></li>
+						<li><a href="#team" data-target="scroll">Team</a>
 						<li><a href="#faq" data-target="scroll">FAQ</a></li>
-						<li><a href="#contact" data-target="scroll">contact</a></li>
+						<li><a href="#contact" data-target="scroll">Contact</a></li>
 					</ul>
 				</div>
 		    </nav>
@@ -37,7 +37,7 @@
 			<section class="jumbotron text-center">
 				<div class="jumbotron__info-container">
 					<span class="fa fa-balance-scale jumbotron__info-scale" aria-hidden="true"></span>
-					<h1 class="jumbotron__info-header">HJS Legal Services</h1>
+					<h1 class="jumbotron__info-header">Legal Services</h1>
 					<div class="jumbotron__info-subContainer">
 						<p>Holeigh J. Skyler Foundation</p>
 					</div>
